--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,14 +6,13 @@
             text-decoration: none;
             padding: 1rem 3rem;
             display: inline-block;
-            border-radius: 10px;
+            border-radius: 50px;
             transition: all .2s;
             position: relative;
             font-size: $default-font-size;
             margin: 0 auto;
             display: block;
-
-
+            transition: all .2s;
 
             //change for <button> element
             border:none;
@@ -22,8 +21,7 @@
 
         &:hover
         {
-                transform: translateY(-2px);
-                box-shadow: 0 10px 20px rgba($color-black,0.2);
+                box-shadow: .5 .5rem 2rem rgba($color-black,0.2);
 
         }
 
@@ -35,19 +33,30 @@
         }
 
         &--white{
-                background-color: $color-white;
-                color: $color-grey-dark;
+                background-color: transparent;
+                color: $color-white;
+                border: 2px solid $color-white;
 
                 &::after{
                         background-color: $color-white;
                 }
+                &:hover{
+                        background-color: rgba($color-white, .3);
+                        border: 2px solid transparent;
+                }
         }
         &--primary{
-                background-color: $color-tertiary-light;
-                color: $color-white;
+                background-color: transparent;
+                color: $color-tertiary-dark;
+                border: 2px solid $color-tertiary-dark;
 
                 &::after{
                         background-color: $color-tertiary-dark;
+                }
+                &:hover{
+                        background-color: rgba($color-tertiary-light, 1);
+                        border: 2px solid transparent;
+                        color: $color-white;
                 }
         }
 
@@ -57,25 +66,24 @@
         &:link,
         &:visited {
                 font-size: $default-font-size;
-                color: $color-primary;
+                color: $color-tertiary-dark;
                 display: inline-block;
                 text-decoration: none;
-                border-bottom: 1px solid $color-primary;
+                border-bottom: 1px solid $color-tertiary-light;
+                background-color: $color-tertiary-lightest;
                 padding: 3px;
                 transition: all .2s;
+                width: 10%;
         }
         
         &:hover {
-                background-color: $color-primary;
+                background-color: $color-tertiary-light;
                 color: $color-white;
                 box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
-                transform: translateY(-2px);
-
         }
 
         &:active {
                 box-shadow: 0 .5rem 1rem rgba($color-black, 0.15);
                 transform: translateY(0);
-
         }
 }
