--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -5,8 +5,12 @@
         overflow: hidden;
         position: relative;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-        background-color: $color-grey-light-1;
+        background-color: #f6f6f6;
         margin-bottom: 5rem;
+        font-size: 1.5rem;
+        &:hover{
+                translateY: -.5rem;
+        }
 
         &__picture {
 
@@ -16,33 +20,31 @@
                 background-blend-mode: color;
                 border-top-right-radius: 3px;
                 border-top-left-radius: 3px;
-                clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-                -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-
+                clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+                -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
                 background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-lightest), url(images/test.jpg);
                 margin-bottom: 2rem;
         }
 
         &__heading{
-                font-size: 1.5rem;
+                font-size: 1.7rem;
                 font-weight: 400;
                 text-align: right;
                 text-transform: uppercase;
                 color: $color-white;
                 position: absolute;
-                top: 10rem;
+                top: 8rem;
                 right: 2rem;
                 width: 75%;
 
                 &--form {
                         top: 15rem;  
                         right: 3rem;
-
                 }
         }
         
         &__heading-span {
-                padding: .5rem;
+                padding: .5rem 1rem;
                 -webkit-box-decoration-break: clone;
                 box-decoration-break: clone;
 
@@ -69,36 +71,41 @@
 
                         li {
                                 display: grid;
+                                font-size: 1.5rem;
                                 grid-template-columns: auto 1fr;
                                 justify-content: center;
                                 align-items: center;
-                                padding: rem;
                                 &:not(:last-child) {
                                         border-bottom: 2px solid $color-grey-dark-2;
+                                        padding-bottom: 1rem;
                                 }
-
-
                         }
                 }
         }
 
         &__key {
-                font-size: 2rem;
+                font-size: 3rem;
                 padding: 0 1rem 0 0;
                 justify-content: center;
                 align-items: center;
+                color: $color-tertiary-dark;
         }
         &__value {
                 
                 justify-content: center;
                 align-items: center;
-                font-size: 1.2rem;
+                font-size: 1.5rem;
+                font-weight: 500;
                 word-spacing: 3px;
+                color: $color-grey-dark-2;
         }
 
         &__form{
                 color: $black;
                 height: auto;
+                &:hover{
+                        translateY: none;
+                }
 
                 &--login{
                 }
@@ -106,10 +113,8 @@
                         height: 20rem;
                         margin-bottom: 2rem;
                 }
-
                 button{
                         margin-bottom: 2rem;
                 }
-
         }
 }
