--- a/sass/pages/_detail.scss
+++ b/sass/pages/_detail.scss
@@ -20,48 +20,54 @@
         grid-area: hero;
         min-height: 60vh;
         background-size: cover;
-        background-position: bottom right;
         padding: 3rem;
         display: grid;
         justify-content: start;
         align-content: end;
 
+
         @include respond(tab-port){
                 min-height: 50vh;
+        }
+
+        @include respond(phone){
+                min-height: 20vh;
         }
 }
 
 .hero__text {
-        font-size: 3rem;
-        font-weight: 400;
+        font-size: 4rem;
+        font-weight: 300;
         text-transform: uppercase;
 }
 
 .cta {
-        font-size: 2.5rem;
+        font-size: 4rem;
         font-weight: 300;
-        background: $color-tertiary-dark;
-        display: flex;
-        flex-direction: column;
+        background: linear-gradient(90deg , rgba($color-tertiary-dark, 1), rgba($color-tertiary-light, 1));
+        display: grid;
+        grid-gap: 0;
         justify-content: center;
-        align-items: center;
+
+        align-content: center;
         @include respond(tab-land){
                 font-size: 3.5rem;
         }
-        
+        @include respond(tab-port){
+                background: linear-gradient(0deg , rgba($color-tertiary-dark, 1), rgba($color-tertiary-light, 1));
+        }
 
         &__icon{
+                margin: 1rem auto;
+                height: 4rem;
+                width: 4rem;
+                fill: $color-tertiary-lightest;
                 @include respond(phone) {
-                        display: grid;
-                        align-items: end;
-                        padding: 2rem 1rem;
-                        display: none;
-
                 }
         }
         &__value{
+                text-align: center;
                 @include respond(phone) {
-                        padding: 2rem;
                 }
 
         }
@@ -73,12 +79,10 @@
 
 .cta1 {
         grid-area: cta1;
-        border-bottom: 1px solid $color-tertiary-light;
 }
 
 .cta2 {
         grid-area: cta2;
-        border-bottom: 1px solid $color-tertiary-light;
 }
 .cta3 {
         grid-area: cta3;
@@ -88,12 +92,26 @@
         display: grid;
         padding: 2rem;
         grid-gap: 5rem;
-        grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(20rem, auto));
         justify-content: space-around;
         margin-bottom: 5rem;
         box-shadow:0 0 1rem rgba($color-black, .2);
 }
 
+.tag{
+        text-align: center;
+        padding: 1rem 3rem;
+        display: inline-block;
+        font-size: 3rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        box-shadow:0 0 2rem rgba($color-black, 1);
+        background-image: linear-gradient(to right bottom, 
+                                rgba($color-tertiary-dark, 1), 
+                                rgba($color-tertiary-light, 1));
+        color: $color-tertiary-lightest;
+        clip-path: polygon(10% 0, 100% 0, 100% 100%, 10% 100%, 0 50%);
+}
 
 .options{
         margin-bottom: 5rem;
@@ -102,11 +120,13 @@
         grid-template-columns: 1fr auto;
         color: $color-tertiary-lightest;
         box-shadow: 0 0 1rem rgba($color-black, .5);
+        font-weight: 400;
         @include respond(tab-port){
                 grid-template-columns: 1fr;
         }
 
         &__map{
+
                 background-color: $color-tertiary-lightest;
 
         }
@@ -115,47 +135,55 @@
                 background-color: $color-tertiary-dark;
                 display: grid;
                 grid-gap: 2rem;
+                font-weight: 400;
+                grid-template-rows: auto 1fr;
                 @include respond(tab-port){
                         grid-template-columns: 1fr 1fr;
+                }
+        }
+        &__shape {
+                width: 10rem;
+                height: 10rem;
+                clip-path: circle(50% at 50% 50%);
+                display: inline
+-block;
+                margin: 0 auto;
+                img {
+                        display: block;
+                        margin: 0 auto;
                 }
         }
 
         &__user-info {
                 display: grid;
-                grid-gap: 4rem;
+                grid-gap: 2rem;
                 justify-content: center;
                 border-radius: 5px;
-                img {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    bottom: 0;
-                    left: 0;
-
-                    width: 10rem;
-                    margin: auto;
-                }
         }
         &__username{
-                font-size: 2rem;
+                font-size: 1.5rem;
+
                 text-align: center;
         }
         &__photo{
-                position: relative;
+                height: 5rem;
         }
         &__buttons{
                 display: grid;
                 grid-gap: 2rem;
                 justify-content: center;
+                align-items: center;
 
                 @include respond(tab-port){
+                        font-size: 2rem;
 
                 }
         }
         &__button{
+                margin: 0;
+                font-weight: 400;
                 @include respond(phone){
-                        font-size: .8rem;
-                        margin: 0;
+                        font-size: 1.2rem;
                 }
         }
 
@@ -164,25 +192,11 @@
 
 
 
-.tag{
-        text-align: center;
-        padding: .5rem;
-        display: inline-block;
-        font-size: 2rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        box-shadow:0 0 2rem rgba($color-black, 1);
-        background-image: linear-gradient(to right bottom, 
-                                rgba($color-tertiary-lightest, .85), 
-                                rgba($color-tertiary-light, .85));
-        color: $color-grey-dark-3;
-        clip-path: polygon(10% 0, 100% 0, 100% 100%, 10% 100%, 0 50%);
-}
 
 .description{
         display: grid;
         background-color: $color-tertiary-lightest;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: $color-tertiary-dark;
         padding: 1rem 5rem;
         box-shadow: 0 0 4rem rgba($color-black, .2);
@@ -196,9 +210,9 @@
         &__form{
                 display: grid;
                 grid-gap: 2rem;
-                grid-template-columns: 1fr auto;
+                grid-template-columns: 70% auto;
                 align-items: center;
-                justify-content: space-between;
+                justify-content: space-around;
                 background-color: $color-tertiary-lightest;
                 box-shadow: 0 0 2rem rgba($color-black, .3);
                 padding: 2rem;
@@ -213,10 +227,17 @@
                                 font-weight: 300;
                         }
                 }
+                &__inputs{
+
+                }
 
                 &__button{
                         align-items: center;
                         height: 4rem;
+                        margin-right: 4rem;
+                        @include respond(tab-port){
+                                margin: 0 auto;
+                        }
                 }
                 &__star{
                         margin-top: 2rem;
