--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -28,6 +28,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #eee;
 $color-grey-light-2: #eee;
+$color-grey-light-3: #ccc;
 
 // grid
 $grid-width: 114rem;
