--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,24 +6,28 @@
         position: relative;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         background-color: #f6f6f6;
-        margin-bottom: 5rem;
         font-size: 1.5rem;
+        transition: all .2s;
+        animation-name: moveInBottom;
+        animation-duration: 1s;
+        animation-timing-function: ease;
         &:hover{
-                translateY: -.5rem;
+                box-shadow: 0 1.5rem 4rem rgba($color-black, .3);
+                transform: translateY(-2rem) scale(1.05);
         }
 
         &__picture {
 
                 background-size: cover;
                 background-position: top right;
-                height: 15rem;
-                background-blend-mode: color;
+                height: 18rem;
+                background-blend-mode: overlay;
                 border-top-right-radius: 3px;
                 border-top-left-radius: 3px;
                 clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
                 -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
                 background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-lightest), url(images/test.jpg);
-                margin-bottom: 2rem;
+                margin-bottom: 4rem;
         }
 
         &__heading{
@@ -33,7 +37,7 @@
                 text-transform: uppercase;
                 color: $color-white;
                 position: absolute;
-                top: 8rem;
+                top: 13rem;
                 right: 2rem;
                 width: 75%;
 
@@ -44,19 +48,19 @@
         }
         
         &__heading-span {
-                padding: .5rem 1rem;
+                padding:  1.2rem;
                 -webkit-box-decoration-break: clone;
                 box-decoration-break: clone;
-
-                background-image: linear-gradient(to right bottom, 
-                                rgba($color-tertiary-light, .85), 
-                                rgba($color-tertiary-dark, .85));
+                background-image: linear-gradient(to right, 
+                                rgba($color-tertiary-dark, 1), 
+                                rgba($color-tertiary-light, 1));
+                box-shadow: 0rem 0rem 2rem rgba($color-black, .5);
                 &--form {
                         font-size: 3rem; 
                         padding: 1rem;
                         word-spacing: 2rem;
                 }
-                a {
+                a{
                         color: $color-grey-light-1;
                 }
 
@@ -94,21 +98,20 @@
                 
                 justify-content: center;
                 align-items: center;
-                font-size: 1.5rem;
+                font-size: 1.8rem;
                 font-weight: 500;
                 word-spacing: 3px;
-                color: $color-grey-dark-2;
+                color: $color-grey-dark-4;
         }
 
         &__form{
                 color: $black;
                 height: auto;
                 &:hover{
-                        translateY: none;
+                        box-shadow: 0 1.5rem 4rem rgba($color-black, .3);
+                        transform: translateY(0);
                 }
 
-                &--login{
-                }
                 &__picture {
                         height: 20rem;
                         margin-bottom: 2rem;
