--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,9 +18,10 @@
 
 @import 'layout/footer';
 @import 'layout/grid';
+@import 'layout/header';
 @import 'layout/items';
+
 
 @import 'pages/detail';
 @import 'pages/home';
 @import 'pages/profile';
-
