--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -54,7 +54,7 @@
                                 font-weight: 400;
                                 transition: background-color .2s;
                                 @include respond(tab-port){
-                                        height: 4.2rem;
+                                        height: 6rem;
                                 }
                         }
                         input::-moz-placeholder{
@@ -104,10 +104,25 @@
                 text-transform: uppercase;
                 font-size: 1.5rem;
                 font-weight: 500;
-                transition: background-color,color .2s;
+                transition: all .2s;
                 border-radius: 3px;
-                &__text{
 
+                &:link,
+                &visited{
+                        font-size: 2rem;
+                        background-image: linear-gradient(120deg, 
+                                        transparent 0%, 
+                                        transparent 50%, 
+                                        rgba($color-white, .4) 50%,
+                                        rgba($color-white, .4) 100%
+                                        );
+                        background-size: 240%;
+                        transition: all .4s;
+                }
+                &:hover,
+                &:active,{
+                        color: $color-tertiary-dark;
+                        background-position: 100%;
                 }
 
                 &__icon{
@@ -119,17 +134,13 @@
 
                 &--active{
                     background-color:$color-tertiary-lightest;
-                    color: $color-tertiary-dark;
+                    color: $color-tertiary-dark !important;
                     & .icon{
                             fill: $color-tertiary-dark;
                     }
                 }
         }
 
-        &__link:hover{
-                background: rgba($color-tertiary-lightest, .5);
-                color: $color-white;
-        }
         &__link:hover &__link__icon{
                 fill: $color-tertiary-dark;
         }
@@ -138,16 +149,15 @@
 
 
 .mobile-nav{
+        position: relative;
         z-index: 9998;
         grid-template-columns: 1fr;
         grid-gap: 3rem;
         background: transparent;
+        // position: fixed;
+        // top: 0;
+        // right: 0;
 
-        &__icon {
-                font-size: 5rem;
-                text-align: center;
-                color: white;
-        }
         &__nav { 
                 display: block;
                 width: 100%;
@@ -160,24 +170,27 @@
                 text-align: center;
                 color: white;
                 text-transform: uppercase;
-                font-size: 1.5rem;
                 font-weight: 900;
-                transition: background-color,color .2s;
-                background: linear-gradient(to right, $color-tertiary-light, $color-tertiary-dark);
+                transition: all .2s;
                 border-bottom: 1px solid $color-tertiary-light;
 
+                &:link,
+                &:visited{
+                        background-image: linear-gradient(to right, $color-tertiary-light, $color-tertiary-dark);
+                }
+
                 &--active{
-                    background: $color-tertiary-lightest;
-                    color: $color-tertiary-dark;
-                    &:hover{
-                            background: $color-tertiary-lightest !important;
-                            color: $color-tertiary-dark !important;
-                    }
+                    background:linear-gradient(to right, $color-tertiary-light, $color-tertiary-lightest) !important;
+                }
+                &--shown{
+                        &:link,
+                        &:visited{
+                            font-size: 1.5rem;
+                        }
                 }
         }
         &__link:hover{
-                background: linear-gradient(to right, rgba($color-tertiary-light,.8), rgba($color-tertiary-dark, .8));
-                color: $color-white;
+                    background:linear-gradient(to right, $color-tertiary-light, $color-tertiary-lightest) !important;
         }
         &__item{
                 display: none;
