--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -29,7 +29,6 @@
                 clip-path: circle(50% at 50% 50%);
                 transform: translateX(-3rem);
                 position: relative;
-
                 margin-right: 2rem;
                 margin-bottom: 2rem;
         }
@@ -40,7 +39,7 @@
         }
 
         &__text {
-                font-size: 1.2rem;
+                font-size: 2rem;
                 margin-bottom: 0;
                 &--heading{
                         display: grid;
@@ -49,6 +48,9 @@
                         justify-content: center;
                         align-items: center;
                         margin-bottom: 2rem;
+                }
+                p{
+
                 }
         }
 
@@ -59,7 +61,6 @@
                 left: 50%;
                 transform: translate(-50%, 0%);
                 color: $color-white;
-                text-transform: uppercase;
                 font-size: 1.7rem;
                 text-align: center;
                 opacity: 0;
