--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,6 +7,7 @@
         &__logo-box {
                 text-align: center;
                 margin-bottom: 1rem;
+                padding: 2rem;
         }
         &__logo {
                 width: 10rem;
@@ -52,6 +53,16 @@
                         margin-right: 1.5rem;
                 }
 
+        }
+
+        &__copyright{
+                padding: 2rem;
+                text-align: center;
+
+        }
+        .row{
+                display: grid;
+                grid-gap: 5rem;
         }
 
         &__link {
