--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -65,6 +65,14 @@
                                     font-size: 3rem;
                                 }
                         }
+                        input::-webkit-input-placeholder{
+                                color: $color-tertiary-dark;
+                                font-size: 5rem;
+                                font-weight: 300;
+                                @include respond(tab-port){
+                                    font-size: 3rem;
+                                }
+                        }
                         input::-webkit-placeholder{
                                 color: $color-tertiary-dark;
                                 font-size: 5rem;
